fix task centering and restructure html slightly BUT break the fucking javascript to add new tasks

--- a/style.css
+++ b/style.css
@@ -18,12 +18,14 @@ p {
 
 task {
     margin: 15px;
+    padding: 1em;
     background: #FFFFFF;
     box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.25);
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 95%;
+    position: relative;
 }
 
 #addTask {
@@ -65,11 +67,10 @@ task {
     display: inline-block;
     text-align: center;
     line-height: 0.95;
-    margin-top: 15px;
-    margin-right: 15px;
     margin-left: 15px;
-    min-width: 3em;
-    min-height: 3em;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 .dueDate {
@@ -84,5 +85,7 @@ task {
 .taskText {
     font-family: Helvetica;
     color: #4A4A4A;
-    letter-spacing: 0px;
+    display: inline-block;
+    position: absolute;
+    left: 100px;
 }
